<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>yolov5_tc</name>
  <version>0.0.0</version>
  <description>Thinking Cars YOLOv5 ROS2 package</description>
  <maintainer email="vankempen@thinking-cars.de">Raphael van Kempen</maintainer>
  <license>CC-BY-NC-4.0</license>

  <depend>cv_bridge</depend>
  <depend>perception_msgs</depend>
  <depend>python-transforms3d-pip</depend>
  <depend>python3-ultralytics-pip</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
